update step 2